# hwpx-generator

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  _bridge_test.py  audit_crossrefs.py  audit_hwpx_content.py  audit_section0.py  compare_section0.py  compare_section0_v2.py  debug_crash_isolate.py  diagnose_xml_serialization.py  test_com_automation.py  test_python_hwpx.py
.claude/: settings.json
.claude/hooks/: hwp-fill-verify.py
.claude/skills/fill-hwp/: SKILL.md
.github/workflows/: build-wheels.yml
analysis/: approach_comparison.md  com_evaluation.md  direct_xml_evaluation.md  hwpx_structure_analysis.md  pyhwpx_evaluation.md
data/: form_content_map.json  sample_input.json  schema.json
hwp-automate-poc/: .gitignore  Cargo.toml  README.md
hwp-automate-poc/src/: main.rs
hwp-automate-py/: .gitignore  Cargo.toml  README.md  mcp_server.py  pyproject.toml
hwp-automate-py/hwp_automate_cli/: __init__.py  __main__.py  field_map.py
hwp-automate-py/src/: lib.rs
hwp-automate-py/tests/: test_svg_regression.py
src/: __init__.py  bridge.py  extract_template.py  field_mapper.py  form_filler.py  generate_hwpx.py  hwp_com.py  hwpx_editor.py  md_parser.py  md_to_ops.py  pdf_compare.py  section_mapper.py
templates/cloud_integrated/: field_map.json  template.json
templates/gyeongnam_rbd/: field_map.json
tests/: test_hwp_com_module.py  test_hwpx_editor.py  test_integration.py
tools/: make_rawcopy.py
