[build-system]
requires = ["maturin>=1.13,<2"]
build-backend = "maturin"

[project]
name = "hwp-automate"
version = "0.1.0"
description = "Python bindings for HWP automation built on rhwp"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "hwp_automate"
